next-dev.err.log
[browser] Uncaught Error: Hydration failed because the server rendered text didn't match the client. As a result this tree will be regenerated on the client. This can happen if a SSR-ed Client Component used:

- A server/client branch `if (typeof window !== 'undefined')`.
- Variable input such as `Date.now()` or `Math.random()` which changes each time it's called.
- Date formatting in a user's locale which doesn't match the server.
- External changing data without sending a snapshot of it along with the HTML.
- Invalid HTML tag nesting.

It can also happen if the client has a browser extension installed which messes with the HTML before React loaded.

https://react.dev/link/hydration-mismatch

  ...
    <HotReload globalError={[...]} webSocket={WebSocket} staticIndicatorState={{pathname:null, ...}}>
      <AppDevOverlayErrorBoundary globalError={[...]}>
        <ReplaySsrOnlyErrors>
        <DevRootHTTPAccessFallbackBoundary>
          <HTTPAccessFallbackBoundary notFound={<NotAllowedRootHTTPFallbackError>}>
            <HTTPAccessFallbackErrorBoundary pathname="/" notFound={<NotAllowedRootHTTPFallbackError>} ...>
              <RedirectBoundary>
                <RedirectErrorBoundary router={{...}}>
                  <Head>
                  <__next_root_layout_boundary__>
                    <SegmentViewNode type="layout" pagePath="layout.tsx">
                      <SegmentTrieNode>
                      <link>
                      <script>
                      <script>
                      <RootLayout>
                        <html
+                         lang="en"
-                         lang="fr"
+                         className="geist_a71539c9-module__T19VSG__variable geist_mono_8d43a2aa-module__8Li5zG__varia..."
-                         className="geist_a71539c9-module__T19VSG__variable geist_mono_8d43a2aa-module__8Li5zG__varia..."
                        >
                          ...
                            <Home>
                              <div className="flex flex-...">
                                <main className="flex flex-...">
                                  <img
+                                   alt="Next.js logo"
-                                   alt="Logo de Next.js"
                                    fetchPriority={undefined}
                                    loading={undefined}
                                    width={100}
                                    height={20}
                                    decoding="async"
                                    data-nimg="1"
                                    className="dark:invert"
                                    style={{color:"transparent"}}
                                    sizes={undefined}
                                    srcSet={undefined}
                                    src="/next.svg"
                                    ref={function}
                                    onLoad={function onLoad}
                                    onError={function onError}
                                  >
                                  ...
                                  <div className="flex flex-...">
                                    <h1
                                      className="max-w-xs text-3xl font-semibold leading-10 tracking-tight text-black ..."
                                    >
+                                     To get started, edit the page.tsx file.
-                                     Pour commencer, modifiez le fichier page.tsx.
                                    ...
                                  ...
                  ...

    at <unknown> (https://react.dev/link/hydration-mismatch)
    at h1 (<anonymous>)
    at Home (app\page.tsx:16:11)
  14 |         />
  15 |         <div className="flex flex-col items-center gap-6 text-center sm:items-start sm:tex...
> 16 |           <h1 className="max-w-xs text-3xl font-semibold leading-10 tracking-tight text-bl...
     |           ^
  17 |             To get started, edit the page.tsx file.
  18 |           </h1>
  19 |           <p className="max-w-md text-lg leading-8 text-zinc-600 dark:text-zinc-400">
[browser] Image with src "http://localhost:3000/vercel.svg" has either width or height modified, but not the other. If you use CSS to change the size of your image, also include the styles 'width: "auto"' or 'height: "auto"' to maintain the aspect ratio.
[browser] SyntaxError: Unexpected token '<', "<!DOCTYPE "... is not valid JSON
SyntaxError: Unexpected token '<', "<!DOCTYPE "... is not valid JSON (components/pay/page.tsx:65:15)
